--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "private": true,
   "scripts": {
     "dev": "ts-node ./index.ts",
-    "build": "tsc",
-    "serve": "node dist/index.js"
+    "serve": "node dist/index.js",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^6.0.1"
   },
   "peerDependencies": {
     "typescript": "^5.9.2"
@@ -25,5 +30,10 @@
     "helmet": "^8.1.0",
     "nodemailer": "^7.0.5",
     "ts-node": "^10.9.2"
-  }
+  },
+  "pre-commit": [
+      "ts.check",
+      "build",
+      "add-build"
+  ]
 }
